@@ -5,6 +5,8 @@ features:
 - added macros to do computations with a higher precision by using double double arithmetic
 - new compiler flag DEBUGSOL={true,false} to enable an internal debugging mechanism to check against a user given debug solution
 - added interface to the NLP solver WORHP; set WORHP=true in order to link to WORHP
+- added analysis of the conflict graph which identifies possible aggregations via the search for
+  strongly connected components and may detect infeasible assignments on the way
 
 parameters:
 - new parameter misc/debugsol to specify a debug solution that should be checked during the solve
@@ -14,6 +16,8 @@ parameters:
 
 interface:
 - added method SCIPsetProbingLPState() to install given LP state and/or norms at the current probing node
+- added method SCIPcliqueGetIndex() which returns the unique identifier for the given clique
+- added method SCIPgetNCliquesCreated() which returns the number of cliques created so far
 
 performance improvements:
 - add and use RESTRICT macro for some pointers
